[tool.poetry]
name = "cute-assistant"
version = "0.1.0"
description = ""
authors = ["Mikanwolfe <mikanwolfe@nekox.net>"]
readme = "README.md"
packages = [{include = "cute_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
tinydb = "^4.7.1"
openai = "^0.27.5"
py-cord = "^2.4.1"
tiktoken = "^0.3.3"
pdfplumber = "^0.9.0"

[tool.poetry.scripts]
start = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
